2012-04-20 Riccardo Motto.a <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PTYView.m
	NetBSD doesn't support streams either.

2012-04-17 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PTYView.m
	Fix imports and includes for FreeBSD

2011-09-08 Riccardo Mottola <rm@gnu.org>

	* Framework/PCAddFilesPanel.m [-setFileTypes]:
	use setAllowedFileTypes method instead of private method which was removed

2011-04-28 Riccardo Mottola <rm@gnu.org>

	* Framework/PCFileManager.m:
	Correct cast according to ctypes caveats.

2011-04-07 Riccardo Mottola <rm@gnu.org>

	* Headers/ProjectCenter/PCDefines.h
	Change ifdef to detect non-gnustep.

	* Framework/PCProjectInspector.m
	Warning fix.

	* Modules/Preferences/Misc/PCMiscPrefs.m
	Remove extra parentheses which confuse = and == warning.

2011-04-06  Fred Kiefer <FredKiefer@gmx.de>

	* Modules/Parsers/ProjectCenter/PCParser.m [-parse]: Move the
	selector and IMP definitions inside the method. Global IMP caching
	is always wrong! And this broke compilation with llvm.

2011-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Modules/Projects/ResourceSet/PCResourceSetProject.m
	([PCResourceSetProject -appendHead:]): Added FIXME.

2011-01-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Editors/ProjectCenter/PCEditor.m (-revertFileToSaved):
	Ask for confirmation before reverting.

2011-01-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Editors/ProjectCenter/PCEditorView.m (-performIndentation):
	Fix annoying bug where pressing the tab key would delete whole
	empty lines. Also register insertions done by the tab key at the
	undo manager.

2011-01-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Projects/Application/PCAppProject+Inspector.m
	(-setDocBasedApp:):
	Fix bug where the document based app flag was reset after opening
	the project inspector for the first time.

2010-12-28  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProjectBuilder.m (-buildArguments): Add either